--- a/creator/templates/create_resume.html
+++ b/creator/templates/create_resume.html
@@ -9,7 +9,7 @@
         {% else %}
         Create
     {% endif %}
-        Resume
+        Doctor
     </h1>
     <hr />
     {{ form.non_field_errors }}
