--- a/creator/templates/create_resume_education.html
+++ b/creator/templates/create_resume_education.html
@@ -3,7 +3,7 @@
 {% block header %} Educations {% endblock %}
 {% block body %}
 
-    <h1>Resume Educations</h1>
+    <h1>Doctor Educations</h1>
     <hr />
     <div class="row">
         <table class="table table-bordered">
