--- a/finder/templates/index.html
+++ b/finder/templates/index.html
@@ -86,7 +86,7 @@
 </div>
     <div class="row result">
         <div class="d-flex flex-wrap">
-            {% for doctor in resume_list %}
+            {% for doctor in doctor_list %}
                 <div class="card">
                     <div class="card-header">
                         <strong>{{ doctor.name }} {{ doctor.family }}</strong>
