--- a/generator/templates/generate_doctor.html
+++ b/generator/templates/generate_doctor.html
@@ -19,6 +19,10 @@
                         {{ doctor.age }}
                     </div>
                     <div>
+                        <strong>Phone_number: </strong>
+                        {{ doctor.phone_number }}
+                    </div>
+                    <div>
                         <strong>Sex: </strong>
                         {{ doctor.sex }}
                     </div>
